force-app/main/default/objects/Case/fields/Heroku_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Heroku_Sync_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heroku Sync Status</label>
    <type>Checkbox</type>
</CustomField>