force-app/main/default/objects/Case/listViews/Ready_to_migrate.listView-meta.xml
<ListView>
    <fullName>Ready_to_migrate</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Heroku_Sync_Status__c</columns>
    <columns>Ready_to_migrate_to_Heroku__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ready to migrate</label>
</ListView>