force-app/main/default/objects/Case/listViews/Sales_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Sales_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Queue</label>
    <queue>Sales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>